syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service EventService {
    rpc GetEvents (google.protobuf.Empty) returns (GetEventsResponse);
    rpc UpdatePublishStatus (UpdatePublishStatusRequest) returns (google.protobuf.Empty);
}

enum PublishedStatus {
    Draft = 0;
    Published = 1;
}


message Event {
    int64 id = 1;
    string title = 2;
    string description = 3;
    PublishedStatus published_status = 4;
    google.protobuf.Timestamp created_at = 5;
}


message GetEventsResponse {
    repeated Event data = 1;
}

message UpdatePublishStatusRequest{
    int64 event_id = 1;
    string trans_id = 2;
    PublishedStatus published_status = 3;
}


